[package]
name = "proxycat"
version = "0.2.0"
authors = ["Terry Chia <terrycwk1994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
anyhow = "1.0.28"

[profile.release]
opt-level = 'z' # Optimize for size.
lto = true
codegen-units = 1
